# AlphaBeta

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  KeyClicks.h  LevelSelect.cpp  LevelSelect.h  MainMenu.cpp  MainMenu.h  Model.cpp  Model.h  PlayLevel.cpp  PlayLevel.h  SelectionGrid.cpp  SelectionGrid.h  Slider.cpp  Slider.h  UserInterface.cpp  View.cpp  View.h  ViewCutscene.cpp  ViewCutscene.h  WorldGrid.cpp  WorldGrid.h
Documentation/: ClassDiagram.dia  Design Documentation.odt  High-level design.dia  LevelSelect Class Diagram.dia  MainMenu Class Diagram.dia  PlayLevel Class Diagram.dia  Requirements Elicitation.ods  UserInterface Class Diagram.dia  ViewCutscene Class Diagram.dia  writingNotes.txt
Graphics/: facePlates.xcf
Levels/: level01.lvl
Scripts/: chapter1.dlg  chapter1RAW.txt  simpleConverterTable.txt
